Transportable.js initial commit
Writing and testing Transportable.js both parsing and jstree generation.
Note: JSTree generation will require some cleanup.

--- a/Business/Water/ICMTransportables/index.html
+++ b/Business/Water/ICMTransportables/index.html
@@ -66,8 +66,18 @@
           <h2>Investigating the raw files</h2>
 
           <p>
-            The transportable database displayed above finally maps to the following ICM tree structure.
+            After the transportable database shown above is loaded in ICM it has the following database structure:
           </p>
+
+          <iframe 
+            class="iframeExample"
+            onload="iframe_resize(this)"
+            frameborder="0"
+            scrolling="no"
+            src="./examples/2/Example.html"
+            width=100%
+            height="275px"
+          ></iframe>
 
       </main>
   </body>
