--- a/Business/Water/ICMTransportables/index.html
+++ b/Business/Water/ICMTransportables/index.html
@@ -295,15 +295,30 @@
               .demo-button-cli:hover {
                 background-color:rgb(18, 112, 18);
               }
-              
             </style>
-            <button class="demo-button demo-button-cli">
-                <svg height="16" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+            <script>
+              $(function(){
+                document.getElementById("gButt").addEventListener("click",function(){
+                  window.location.href = "https://github.com/sancarn/InnovyzeTransportableJS";
+                });
+                document.getElementById("tButt").addEventListener("click",function(){
+                  window.location.href = "examples/1";
+                });
+                document.getElementById("fButt").addEventListener("click",function(){
+                  window.location.href = "examples/2";
+                });
+                document.getElementById("cButt").addEventListener("click",function(){
+                  window.location.href = "examples/3";
+                });
+              })
+            </script>
+            <button id="gButt" class="demo-button demo-button-cli">
+              <svg height="16" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
               JavaScript library
             </button>
-            <button class="demo-button demo-button-tree">Tree Viewer</button>
-            <button class="demo-button demo-button-file">File Viewer</button>
-            <button class="demo-button demo-button-cli">CLI  Viewer</button>
+            <button id="tButt" class="demo-button demo-button-tree">Tree Viewer</button>
+            <button id="fButt" class="demo-button demo-button-file">File Viewer</button>
+            <button id="cButt" class="demo-button demo-button-cli" >CLI  Viewer</button>
           </div>
           
           <h3>Limitations and community contributions</h3>
