Stopped using linkedin for the image

--- a/Business/Water/ICMTransportables/examples/2/index.html
+++ b/Business/Water/ICMTransportables/examples/2/index.html
@@ -99,7 +99,7 @@
                             overflow:auto;
                         }
                         .profile-img {
-                            background-image: url("https://media.licdn.com/dms/image/C4D03AQFfVgF30oZvdQ/profile-displayphoto-shrink_200_200/0?e=1548288000&v=beta&t=GcBG6MV6KoBIGDl2RPUK6NhmbBrhMVirHAV-WqmPgXE");
+                            background-image: background-image: url("./Business/James.jpg");
                             background-size:contain;
                             background-repeat: no-repeat;
                             width:6vw;
