--- a/Business/Water/ICMTransportables/index.html
+++ b/Business/Water/ICMTransportables/index.html
@@ -362,6 +362,46 @@
           <p>
             Enjoy!
           </p>
+          <a href="https://www.linkedin.com/in/james--warren/">
+            <style>
+                .profile-card {
+                    display: inline-block;
+                    border-style:solid;
+                    padding:0.5vw;
+                    width:30vw;
+                }
+                .profile-container {
+                    display:table;
+                }
+                .profile-cell {
+                    display:table-cell;
+                    width:100%;
+                    height:100%;
+                }
+                .profile-text {
+                    width:23vw;
+                    overflow:auto;
+                }
+                .profile-img {
+                    background-image: url("./Business/James.jpg");
+                    background-size:contain;
+                    background-repeat: no-repeat;
+                    width:6vw;
+                }
+            </style>
+            <div class="profile-card">
+              <div class="profile-container">
+                <div class="profile-cell profile-text">
+                  <b>Author:</b>
+                  <br>
+                  <b>James Warren, Software Engineer</b>
+                  <br>
+                  Leicester, United Kingdom
+                </div>
+                <div class="profile-cell profile-img"></div>
+              </div>
+            </div>
+          </a>
       </main>
   </body>
 </html>
