--- a/Business/Water/ICMTransportables/examples/1/index.html
+++ b/Business/Water/ICMTransportables/examples/1/index.html
@@ -100,7 +100,7 @@
                             overflow:auto;
                         }
                         .profile-img {
-                            background-image: background-image: url("./Business/James.jpg");
+                            background-image: url("https://sancarn.github.io/Business/James.jpg");
                             background-size:contain;
                             background-repeat: no-repeat;
                             width:6vw;
