--- a/Business/Water/ICMTransportables/index.html
+++ b/Business/Water/ICMTransportables/index.html
@@ -28,6 +28,34 @@
     <script src="./libs/libs/katex.js"></script>
     <link rel="stylesheet" href="./libs/libs/katex.css" />
     
+    <!--< Footer data >-->
+    <style>
+      .profile-card {
+          display: inline-block;
+          border-style:solid;
+          padding:0.5vw;
+          width:30vw;
+      }
+      .profile-container {
+          display:table;
+      }
+      .profile-cell {
+          display:table-cell;
+          width:100%;
+          height:100%;
+      }
+      .profile-text {
+          width:23vw;
+          overflow:auto;
+      }
+      .profile-img {
+          background-image: url("https://sancarn.github.io/Business/James.jpg");
+          background-size:contain;
+          background-repeat: no-repeat;
+          width:6vw;
+      }
+    </style>
+    
   </head>
   <body>
       <header class="page-header">
@@ -363,32 +391,6 @@
             Enjoy!
           </p>
           <a href="https://www.linkedin.com/in/james--warren/">
-            <style>
-                .profile-card {
-                    display: inline-block;
-                    border-style:solid;
-                    padding:0.5vw;
-                    width:30vw;
-                }
-                .profile-container {
-                    display:table;
-                }
-                .profile-cell {
-                    display:table-cell;
-                    width:100%;
-                    height:100%;
-                }
-                .profile-text {
-                    width:23vw;
-                    overflow:auto;
-                }
-                .profile-img {
-                    background-image: url("https://sancarn.github.io/Business/James.jpg");
-                    background-size:contain;
-                    background-repeat: no-repeat;
-                    width:6vw;
-                }
-            </style>
             <div class="profile-card">
               <div class="profile-container">
                 <div class="profile-cell profile-text">
@@ -405,11 +407,3 @@
       </main>
   </body>
 </html>
-
-
-<!--<
-   Recently I got 1 step closer to my vision of automated transportable database management.
->-->
-
-
-
