--- a/Business/Water/ICMTransportables/examples/1/index.html
+++ b/Business/Water/ICMTransportables/examples/1/index.html
@@ -51,6 +51,15 @@
                 font-size:1.3vw;
             }
         </style>
+        <script>
+            if(isIe()){
+                alert("This site is currently not functional on internet explorer.");
+            };
+            function isIe() {
+                return window.navigator.userAgent.indexOf("MSIE ") > 0
+                    || !!navigator.userAgent.match(/Trident.*rv\:11\./);
+            }
+        </script>
     </head>
     <body>
         <div class="main-container">
