--- a/Business/Water/ICMTransportables/examples/1/index.html
+++ b/Business/Water/ICMTransportables/examples/1/index.html
@@ -53,7 +53,7 @@
         </style>
         <script>
             if(isIe()){
-                alert("This site is currently not functional on internet explorer.");
+                //alert("This site is currently not functional on internet explorer.");
             };
             function isIe() {
                 return window.navigator.userAgent.indexOf("MSIE ") > 0
