--- a/Business/Water/ICMTransportables/examples/2/index.html
+++ b/Business/Water/ICMTransportables/examples/2/index.html
@@ -22,6 +22,7 @@
         <style>
             html, body {
                 width:100%;
+                height:100%;
             }
             .main-container {
                 width:100%;
