--- a/Business/Water/ICMTransportables/examples/3/index.html
+++ b/Business/Water/ICMTransportables/examples/3/index.html
@@ -29,6 +29,7 @@
         <style>
             html, body {
                 width:100%;
+                height:100%;
             }
             .main-container {
                 width:100%;
