Fixing article css issues

--- a/Business/Water/ICMTransportables/index.html
+++ b/Business/Water/ICMTransportables/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Parsing ICM Standalone and Transportable databases</title>
     
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    
     <!--<Include Theme>-->
     <link rel="stylesheet" type="text/css" href="./css/Cayman.css"/>
 
