Adding a mail-to url

--- a/Business/Water/ICMTransportables/examples/4/index.html
+++ b/Business/Water/ICMTransportables/examples/4/index.html
@@ -61,6 +61,9 @@
                 <p>
                     This demo demonstrates how easy it is to setup a version checker for transportable databases. Upload your transportable database by either dropping it into the window or clicking the upload button.
                 </p>
+                <p>
+                    <b>Please <a href="mailto:sancarn@hotmail.co.uk">contact me</a> if you have access to InfoNet 18.0 or 19.5 (ICM 8.0 or 9.5) as these are currently unsupported by the tool!</b>
+                </p>
                 <style>
                 .octicon-mark-github {
                     width:2vw;
