--- a/Business/Water/ICMTransportables/examples/3/index.html
+++ b/Business/Water/ICMTransportables/examples/3/index.html
@@ -152,13 +152,13 @@
                         const files = $("#input")[0].files;
                         
                         //files to array
-                        var aFiles = []
+                        var aFiles = [];
                         for(var i=0;i<files.length;i++){
-                            aFiles.push(files[i])
+                            aFiles.push(files[i]);
                         }
                         
                         //array of results
-                        var results=[]
+                        var results=[];
 
                         //callback to be added to tdb.onLoad
                         const func = function(transportable) {
