--- a/Business/Water/ICMTransportables/examples/4/index.html
+++ b/Business/Water/ICMTransportables/examples/4/index.html
@@ -62,7 +62,7 @@
                     This demo demonstrates how easy it is to setup a version checker for transportable databases. Upload your transportable database by either dropping it into the window or clicking the upload button.
                 </p>
                 <p>
-                    <b>Please <a href="mailto:sancarn@hotmail.co.uk">contact me</a> if you have access to InfoNet 18.0 or 19.5 (ICM 8.0 or 9.5) as these are currently unsupported by the tool!</b>
+                    <b>Please <a href="mailto:sancarn@hotmail.co.uk">contact me</a> if you discover any Transportable database versions which are unsupported! Currently we support transportable databases between InfoWorks 5.0/InfoNet 5.0 and InfoWorks 9.5/InfoNet 19.5</b>
                 </p>
                 <style>
                 .octicon-mark-github {
