More updates to site
Global article navigation

--- a/Business/Water/ICMTransportables/index.html
+++ b/Business/Water/ICMTransportables/index.html
@@ -31,7 +31,9 @@
     <!--<Include Katex>-->
     <script src="./libs/libs/katex.js"></script>
     <link rel="stylesheet" href="./libs/libs/katex.css" />
-    
+    <!--<Article Navigator>-->
+    <script src="./libs/libs/ArticleNavigator.js"></script>
+
     <!--< Footer data >-->
     <style>
       html, body {
@@ -63,12 +65,12 @@
           width:6vw;
       }
     </style>
-    
   </head>
   <body>
       <header class="page-header">
-          <h1>Parsing ICM Standalone and Transportable databases</h1>
-          <p>James Warren</p>
+          <h1 class="headerIgnore">Parsing ICM Standalone and Transportable databases</h1>
+          <h2 class="headerIgnore">James Warren</h2>
+          <a href="../" style="color:white;"> &#11014; Previous page &#11014;</a>
       </header>
       <main class="main-content">
           <h2>Motivation</h2>
