--- a/Business/Water/index.html
+++ b/Business/Water/index.html
@@ -10,6 +10,6 @@
     <div style="text-indent: 50px;line-height: 0em;"><a href="ICMTransportables/examples/4">Online Transportable Database Version Checker</a></div><br>
     <div style="text-indent: 50px;line-height: 0em;"><a href="ICMTransportables/examples/3">Online Transportable Database CLI</a></div><br>
     <div style="text-indent: 25px;line-height: 0em;"><b><a href="GUIs with Ruby">Custom GUIs in InfoWorks using Ruby</a></b><br></div><br>
-    
+    <div style="text-indent: 25px;line-height: 0em;"><b><a href="RubyTidbits">Ruby tips & tricks</a></b><br></div><br>
   </body>
 </html>
