--- a/Business/Water/SurveyStandardTips/index.html
+++ b/Business/Water/SurveyStandardTips/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="./css/cayman.css"/>
+    <link rel="stylesheet" href="./css/Cayman.css"/>
     <style>
       
       img {
