--- a/Business/Water/SurveyStandardTips/index.html
+++ b/Business/Water/SurveyStandardTips/index.html
@@ -44,7 +44,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <h1 class="headerIgnore">Advice for building survey standards</h1>
       <h2 class="headerIgnore">James Warren</h2>
       <a href="../" style="color:white;"> &#11014; Previous page &#11014;</a>
