Completion of article

--- a/Business/Water/index.html
+++ b/Business/Water/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>Projects:</h1>
+    <div style="text-indent: 00px;line-height: 0em;"><h2>Waste Water General</h2></div><br>
+    <div style="text-indent: 25px;line-height: 0em;"><b><a href="SurveyStandardTips">Survey and Data Standards - Lessons Learnt</a></b><br></div><br>
     <div style="text-indent: 00px;line-height: 0em;"><h2>InfoWorks ICM</h2></div><br>
     <div style="text-indent: 25px;line-height: 0em;"><b><a href="ICMTransportables">ICM Transportable Database JavaScript library</a></b><br></div><br>
     <div style="text-indent: 50px;line-height: 0em;"><a href="ICMTransportables/examples/1">Online Transportable Database Viewer</a></div><br>
