Link to linked in post

--- a/Business/Water/SurveyStandardTips/index.html
+++ b/Business/Water/SurveyStandardTips/index.html
@@ -320,7 +320,7 @@
       </p>
       <h2>Conclusion</h2>
       <p>
-        That's all information I have for now. Remember to comment your own ideas on the linked in post!
+        That's all information I have for now. <a href="https://www.linkedin.com/feed/update/urn:li:activity:6516835338693017600/">Remember to comment your own ideas on the linked in post!</a>
       </p>
     </article>
   </body>
