--- a/Business/Water/SurveyStandardTips/index.html
+++ b/Business/Water/SurveyStandardTips/index.html
@@ -39,14 +39,9 @@
         
       }
       table {
-        display:table-cell !important;
-        
-        position: relative !important;
+        display: block;
+        width: -webkit-fit-content;
         margin: 0 auto;
-        /*
-        transform: translate(-40%, 0) !important;
-        left: 50% !important;
-        */
       }
       table th {
         padding: 12px;
