--- a/Business/Water/SurveyStandardTips/index.html
+++ b/Business/Water/SurveyStandardTips/index.html
@@ -315,8 +315,9 @@
       </p>
       <h2>Conclusion</h2>
       <p>
-        That's all information I have for now. <a href="https://www.linkedin.com/feed/update/urn:li:activity:6516835338693017600/">Remember to comment your own ideas on the linked in post!</a>
+        That's all information I have for now. Remember to comment your own ideas on the linked in post!
       </p>
+      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6516835338315538432" height="416" width="504" frameborder="0" allowfullscreen=""></iframe>
     </article>
   </body>
 </html>
