Additional survey standards to be written

--- a/Business/Water/SurveyStandardTips/index.html
+++ b/Business/Water/SurveyStandardTips/index.html
@@ -317,6 +317,11 @@
       <p>
         That's all information I have for now. <a href="https://www.linkedin.com/feed/update/urn:li:activity:6516835338693017600/">Remember to comment your own ideas on the linked in post!</a>
       </p>
+      <!--
+        * Meaning of survey status to be described
+        * QA - Survey status consistency across surveys
+        * Survey status "FR" (Forcefully Raised) - This would help with survey status consistency
+      -->
     </article>
   </body>
 </html>
