--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       Without further ado, here are the current links I have set up.
     </p>
     <p><a href="Business">Business</a></p>
-    <p><a href="Youtube">Youtube</a></p>
+    <p><a href="https://www.youtube.com/@Sancarn">Youtube</a></p>
   </body>
 </html>
